Fix spacing in sidebar

--- a/frontend/src/app/ui/ticket-detail/ticket-sidebar/ticket-sidebar.component.scss
+++ b/frontend/src/app/ui/ticket-detail/ticket-sidebar/ticket-sidebar.component.scss
@@ -15,6 +15,7 @@ h2 {
 }
 
 .assigned-user {
+    margin-top: $internal-gap;
     margin-bottom: $small-gap;
 }
 
